--- a/files/预备代理列表/styles.css
+++ b/files/预备代理列表/styles.css
@@ -1286,13 +1286,13 @@
   top:200px;
   width:140px;
   height:40px;
+  color:#FF0000;
 }
 #u465 {
   position:absolute;
   left:2px;
   top:12px;
   width:136px;
-  visibility:hidden;
   word-wrap:break-word;
 }
 #u466_img {
